<resources>
    <string name="app_name">Task Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="username">user name</string>
    <string name="password">password</string>
    <string name="check_admin">If you are admin, Please Enter admin password</string>
    <string name="admin_code">admin code</string>
    <string name="user_exist">User already exist</string>
    <string name="user_dont_exist">At first sign up</string>
    <string name="invalid_information">Invalid information</string>
    <string name="task_title">Title</string>
    <string name="hint_task_title">Task title</string>
    <string name="task_description">Description</string>
    <string name="hint_task_description">Task description</string>
    <string name="task_time">Time</string>
    <string name="task_date">Date</string>
    <string name="task_save">Save</string>
    <string name="task_edit">Edit</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="date_picker_title">Date Of Task</string>
    <string name="time_picker_title">Time Of Task</string>
    <string name="btn_cancel">Cancel</string>

    <string name="all_task_info">
        Title: %1$s
        Description: %2$s
        State: %3$s
        Date: %4$s
        Time: %5$s
    </string>
    <string name="menu_text_logout">Log Out</string>
    <string name="menu_text_delete_all">Delete All</string>
    <string name="menu_text_search">Search</string>
</resources>