<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.taskmaneger.viewModel.BottomSheetViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/so_light_gray"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:background="@color/light_gray" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit"
            style="@style/BottomSheetTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_56"
            android:text="@string/task_edit"
            app:icon="@drawable/ic_edit" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            style="@style/BottomSheetTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_56"
            android:text="@string/share"
            app:icon="@drawable/ic_share"
            android:onClick="@{()->viewModel.onShareBtnClickListener()}"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete"
            style="@style/BottomSheetTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_56"
            android:text="@string/delete"
            app:icon="@drawable/ic_trashcan"
            android:onClick="@{()->viewModel.onDeleteBtnClickListener()}"
            />

    </LinearLayout>
</layout>